@@ -988,6 +988,11 @@ void CLASS canon_sraw_load_raw()
     }
   }
 
+#ifdef LIBRAW_LIBRARY_BUILD
+  if(imgdata.params.sraw_ycc)
+    return;
+#endif
+
   for (cp=model2; *cp && !isdigit(*cp); cp++);
   sscanf (cp, "%d.%d.%d", v, v+1, v+2);
   ver = (v[0]*1000 + v[1])*1000 + v[2];
