@@ -120,6 +120,7 @@ void usage(const char *prog)
 #endif
 "-mem	   Use memory buffer instead of FILE I/O\n"
 "-disars   Do not use RawSpeed library\n"
+"-dsrawrgb Disable YCbCr to RGB conversion for sRAW\n"
 );
     exit(1);
 }
@@ -338,6 +339,8 @@ int main(int argc, char *argv[])
 					  OUT.use_rawspeed=0;
                   else if(!strcmp(optstr,"-dcbe"))
                       OUT.dcb_enhance_fl = 1;
+                  else if(!strcmp(optstr,"-dsrawrgb"))
+                      OUT.sraw_ycc = 1;
                   else if(!strcmp(optstr,"-dbnd"))
                   {
                   	for(c=0; c<4; c++)
